Raise ArgumentError when attempting to create a named Struct without members

Anonymous structs without members are not allowed, and it seems
like an oversight that named structs without members are allowed.

Fixes [Bug #19416]