bootstraptest/test_struct.rb
@@ -1,5 +1,5 @@
 assert_equal 'Struct::Foo', %q{
   Struct.instance_eval { const_set(:Foo, nil) }
-  Struct.new("Foo")
+  Struct.new("Foo", :a)
   Struct::Foo
 }
